@@ -20,6 +20,7 @@ Version 0.7.4
 Date: July 24th 2024
     Features:
         - Add the ability to switch through project pages with control-tab and control-shift-tab
+        - When opening the main window, use the same column widths as when it was last closed.
     Bugfixes:
         - Fix a possible threading race while destroying textures, which could cause an illegal access crash.
         - Fix a loading error when mods use non-ASCII characters in their settings.
